# DecodEEG

./: .gitignore  Makefile  README.md  eeg_video_dataset.csv  pyproject.toml
Classifiers/: README.md  inference.py  inference_glmnet.py  multi_inference.py  train_classifier_mono.py  train_classifier_multi.py  train_glmnet.py  train_glmnet_1sub.py  train_glmnet_1sub_shuffle.py  train_glmnet_v2.py  train_net.py  two_stage_eval.py
Classifiers/modules/: models.py  utils.py
EEG_preprocessing/: DE_PSD.py  extract_first_window.py  segment_raw_signals_200Hz.py  segment_sliding_window.py
EEGtoVideo/GLMNet/: README.md  label_mappings.json  multi_inference.py  train_glmnet.py
EEGtoVideo/GLMNet/modules/: utils_glmnet.py
GLMNet/: README.md  inference_glmnet.py  multi_inference.py  old_train_glmnet_1sub.py  train_glmnet.py  train_glmnet_1sub.py  train_glmnet_1sub_shuffle.py  train_net.py
GLMNet/modules/: models_paper.py  utils_glmnet.py
NEW/scripts/: train_transformer.py
NEW/utils/: build_dataset_csv.py
Preprocessing/: README.md  create_label_cluster.py  segment_sliding_window.py
