[project]
name = "decodeeg"
version = "0.1.0"
description = "This project collects utilities to classify EEG recordings and convert those predictions into natural language prompts for text-to-video models. Models such as EEGNet, DeepNet and GLMNet can be trained or loaded from checkpoint directories."
readme = "README.md"
# Évite la résolution croisée 3.12 en limitant explicitement à 3.10
requires-python = ">=3.10.13,<3.12"
dependencies = [
    "torch==2.4.1+cu121",
    "torchvision==0.19.1+cu121",
    "torchaudio==2.4.1+cu121",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
    
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"


[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
